discussion/kv_engine/161463/161463_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Adaptions for googletest 1.11.0

Change-Id: I394a53516a2dbbfbb1ab7d09b35ef361cbf475b8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-09-14 08:44:08.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-14 09:46:58.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39816/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\tests\module_tests\checkpoint_test_impl.h(23): error C2065: "HasOperation": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39816/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12345/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
MATCHER_P(HasOperation, op, "") {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:11: error: use of undeclared identifier "HasOperation" [clang-diagnostic-error]
MATCHER_P(HasOperation, op, "") {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:25: error: use of undeclared identifier "op" [clang-diagnostic-error]
MATCHER_P(HasOperation, op, "") {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:32: error: expected ";" after top level declarator [clang-diagnostic-error]
MATCHER_P(HasOperation, op, "") {
                               ^
                               ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12345/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12345/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11135/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/include/mcbp/protocol/opcode.h b/include/mcbp/protocol/opcode.h
index 3f6ea227a..f2fc42584 100644
--- a/include/mcbp/protocol/opcode.h
+++ b/include/mcbp/protocol/opcode.h
@@ -444,8 +444,10 @@ bool is_preserve_ttl_supported(ClientOpcode opcode);
 /// Is the command currently supported but deprecated
 bool is_deprecated(ClientOpcode opcode);
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out, const cb::mcbp::ClientOpcode&amp; opcode);
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out, const cb::mcbp::ServerOpcode&amp; opcode);
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out,
+                         const cb::mcbp::ClientOpcode&amp; opcode);
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out,
+                         const cb::mcbp::ServerOpcode&amp; opcode);
 
 } // namespace cb::mcbp
 
diff --git a/protocol/mcbp/opcode.cc b/protocol/mcbp/opcode.cc
index 47ad91056..7c530d398 100644
--- a/protocol/mcbp/opcode.cc
+++ b/protocol/mcbp/opcode.cc
@@ -1273,12 +1273,14 @@ bool is_preserve_ttl_supported(ClientOpcode opcode) {
             cb::to_hex(uint8_t(opcode)));
 }
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out, const cb::mcbp::ClientOpcode&amp; opcode) {
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out,
+                         const cb::mcbp::ClientOpcode&amp; opcode) {
     out &lt;&lt; ::to_string(opcode);
     return out;
 }
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out, const cb::mcbp::ServerOpcode&amp; opcode) {
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; out,
+                         const cb::mcbp::ServerOpcode&amp; opcode) {
     out &lt;&lt; ::to_string(opcode);
     return out;
 }

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11135/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1986/ : FAILURE

Compile error at [2021-09-14T08:47:18.110Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:1:
error: C++ requires a type specifier for all declarations
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1986/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2002/ : FAILURE

Compile error at [2021-09-14T08:50:01.967Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:10:
error: expected constructor, destructor, or type conversion before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2002/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13960/ : FAILURE

Compile error at [2021-09-14T08:46:28.846Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:10:
error: expected constructor, destructor, or type conversion before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13960/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22193/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14694/ : FAILURE

Compile error at [2021-09-14T08:45:47.489Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:1:
error: C++ requires a type specifier for all declarations
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14694/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14201/ : FAILURE

Compile error at [2021-09-14T08:47:09.608Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:10:
error: expected constructor, destructor, or type conversion before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14201/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13100/ : FAILURE

Compile error at [2021-09-14T08:50:36.725Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test_impl.h:23:1:
error: C++ requires a type specifier for all declarations
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13100/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33919/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-09-14 11:17:46.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
